Search, Darkmode 구현

--- a/Mission 01/mission 01.html
+++ b/Mission 01/mission 01.html
@@ -11,6 +11,10 @@
 </head>
 
 <body>
+    <div class="head_title">
+        <p>여러분의 눈은 소중하니까, <strong>지금 바로 다크 모드를 켜보세요!</strong></p>
+    </div>
+
     <button onclick="DarkMode()" id="dark_bt">다크 모드로 보기</button>
     <div class="search">
         <input onkeyup="search()" type="text" id="searchbar" placeholder="원하는 동물을 검색해보세요.">
