Search, Darkmode 구현

--- a/Mission 01/mission 01.html
+++ b/Mission 01/mission 01.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="head_title">
+    <div class="head_title" onclick="DarkMode()">
         <p>여러분의 눈은 소중하니까, <strong>지금 바로 다크 모드를 켜보세요!</strong></p>
     </div>
 
