[mission 03]::TO DO LIST 완성

--- a/Mission 02/mission 02.html
+++ b/Mission 02/mission 02.html
@@ -8,7 +8,7 @@
     <h1>TO DO LIST</h1>
     <div class="main">
         <form class="" action="mission 02.html" method="post">
-            <input type="text" placeholder="할 일을 적어봅시다" name="todo">
+            <input type="text" placeholder="할 일을 적어봅시다!" name="todo">
             <button type="submit"><b>ADD</b></button>
         </form>
         <div class="todolist">
